# squad

./: .gitignore  LICENSE  README.md
src/: Cargo.toml
src/app/: Cargo.toml
src/app/src/: hello.rs  hello_impl.rs  main.rs  subscriber.rs
src/squad/: Cargo.toml
src/squad/src/: lib.rs
src/squad_codegen/: Cargo.toml
src/squad_codegen/src/: error.rs  gen_traits.rs  lib.rs  method_tools.rs  mod_impl.rs  mod_trait.rs
